--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,8 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/Ceregeo
+    - icon: fontawesome/brands/instagram
+      link: https://instagram.com/ceregeo_fcyt   
     - icon: fontawesome/brands/twitter
       link: https://twitter.com
     - icon: fontawesome/brands/linkedin
