--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,10 +15,15 @@ copyright: 'Copyright &copy; 2021 - 2022 Fernando Tentor'
 
 theme:
   name: material
+  logo: images/logo.svg
 
   # 404 page
   static_templates:
     - 404.html
+
+  features:
+    # - navigation.tracking
+    # - navigation.tabs # Menu de navegación
 
   # Don't include MkDocs' JavaScript
   include_search_page: false
@@ -45,6 +50,10 @@ theme:
   favicon: images/favicon.ico
   icon:
     logo: logo
+    tag:
+      html: fontawesome/brands/html5
+      js: fontawesome/brands/js
+      css:  fontawesome/brands/css3
 
 # Options
 extra:
@@ -57,6 +66,10 @@ extra:
       link: https://twitter.com
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/
+  tags:
+    HTML5: html
+    JavaScript: js
+    CSS: css
 
 # Extensions
 markdown_extensions:
@@ -98,6 +111,11 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
 
+# Plugin
+plugins:
+  - tags
+  - tags:
+      tags_file: pages/tags.md
 
 
 # Page tree
@@ -108,3 +126,4 @@ nav:
   - Noticias: pages/noticias.md
   - Publicaciones: pages/publicaciones.md
   - Contacto: pages/contacto.md
+  - Tags: pages/tags.md
