--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ site_url: https://ceregeo.github.io/Ceregeo/
 # Repository
 repo_name: Ceregeo
 repo_url: https://github.com/Ceregeo/Ceregeo
+edit_uri: ./edit/main/docs
 
 # Copyright
 copyright: 'Copyright &copy; 2021 - 2022 Fernando Tentor'
